namespaces/live.cloud-platform.service.justice.gov.uk/remand-and-sentencing-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "remand-and-sentencing-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "remand-and-sentencing"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Remand and sentencing: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/remand-and-sentencing-prototype"
    cloud-platform.justice.gov.uk/team-name: "remand-and-sentencing"
    cloud-platform.justice.gov.uk/review-after: ""
